--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,60 @@
 .selectedButton {
     background-color : #0a0808;
 }
+
+#searchEntryContainer p {
+    text-align: right;
+    width: 250px;
+}
+
+#searchEntryContainer label {
+    width: 174px;
+    border: 1px solid darkgrey;
+    text-align: left;
+    height: 26px;
+}
+
+#newEntryContainer p {
+    text-align: right;
+    width: 250px;
+}
+
+#newEntryContainer label {
+    width: 174px;
+    border: 1px solid darkgrey;
+    text-align: left;
+    height: 26px;
+}
+
+select {
+    width: 174px;
+    height: 26px;
+}
+
+.entryCell{
+    max-width: 200px!important;
+    overflow: hidden!important;
+    text-overflow: ellipsis!important;
+    white-space: nowrap!important;
+}
+
+i:hover{
+    cursor: pointer;
+}
+
+#entryUpdate {
+    height: 200px;
+    width: 820px;
+    margin-bottom: 10px;
+    max-width: 820px;
+}
+
+#viewEntryBox i{
+    margin-left: 98%;
+}
+
+#viewEntryBox {
+    padding: 20px;
+    border: 1px solid gray;
+    background-color: #ececec;
+}
