--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    display: none;
+}
 
 .navbar {
     margin-bottom: 0;
@@ -30,7 +33,7 @@
     background-color: #555;
     color: white;
     padding: 15px;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
   }
